--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h1>Hello world</h1>
-        <p>github hosted</p>
+        <table>
+            <tr>
+                <th>home</th>
+                <th>about</th>
+                <th>skills</th>
+                <th>projects</th>
+                
+            </tr>
+        </table>
+        <h1>Caydn</h1>
+        <h2>Software Engineer Student / Intern</h2>
     </body>
 </html>
